[tool.poetry]
name = "car_park_app"
version = "0.1.0"
description = ""
authors = ["cafozer <alicaferozer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
zimports = "^0.2.2"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
